???? 0.8.9

    user visible changes, client:
    * During unwtar if .wtar.aa file is joined, .wtar.done file is removed.

    user visible changes, admin:
    * Creation of .txt files for all files in instl directory was moved from up2s3 command to create-links command.
    * up2s3 will upload up to the latest repo revision and not up to BASE_REPO_REV.

    programmer visible changes:
    * platformHelper renamed platform_helper everywhere.
    * New method InstlAdmin.get_last_repo_rev

4/3/2014 0.8.8 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Fixed a problem where files created when instl runs under sudo,
        could not be re-written under regular user.
    * unwtar command added - replaced individual batch file unwtar commands with inst unwtar.
    * Big files above 5MB will be wtared and split into chuncks is the result wtar if is larger than 5MB.
    * New variable: COPY_IGNORE_PATTERNS instead of hard coded in the copy producing code.
    * sync command will report the number of files to sync.

    programmer visible changes:
    * os.umask(0) is called first thing.
    * batch file creation does chmod(777).
    * New method PlatformSpecificHelperBase.unwtar_current_folder.
    * Fixed: instl would not create a correct call for itself (e.g. instl unwtar) when running uncompiled on windows.

26/2/2014 0.8.7 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * When using --run and script fails, exit code is passed correctly.
    * Proper downloading for all possible required items when target_os != current_os (offline sync).
    * Fixed: When running compiled instl in interactive mode exception was raised when instlClient and instlAdmin
        defined the same const values.
    * Better message if checking signature of a downloaded file fails.

    programmer visible changes:
    * init_download_tool method added to platformHelper so that the dl_tool can be initialized after the yaml files were read.