@@ -1,7 +1,9 @@
 ???? 0.8.9
 
     user visible changes, client:
+    * unwtar and check-checksum are now done as internal instl commands instead of using command line tools.
     * During unwtar if .wtar.aa file is joined, .wtar.done file is removed.
+    * New command check_checksum will check checksums according to the to_sync_info_map.txt instead of relying on external .exe.
 
     user visible changes, admin:
     * Creation of .txt files for all files in instl directory was moved from up2s3 command to create-links command.
@@ -10,6 +12,8 @@
     programmer visible changes:
     * platformHelper renamed platform_helper everywhere.
     * New method InstlAdmin.get_last_repo_rev
+    * init_from_cmd_line_options can now assign defaults to options that were not specifed on the command line.
+    * InstlMisc commands can now report progress by using --start-progress and --total-progress command line options.
 
 4/3/2014 0.8.8 Shai Shasag <shai@waves.com>
 
